<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ESC App</string>
    <string name="select_contest_tab_0_header">Eurovision Song Contest</string>
    <string name="select_contest_tab_1_header">OGAE Second Chance Contest</string>
    <string name="select_contest_tab_1_header_short">OGAE SC</string>
    <string name="select_year">Select contest:</string>
    <string name="action_set_rate_mode">Set rate mode</string>
    <string name="action_reset_rates">Reset rates</string>
    <string name="action_delete_comments">Delete comments</string>
    <string name="action_save_ratings_as_image">Save ratings as image</string>
    <string name="action_about">About</string>
    <string name="title_activity_select_contest">Select Contest</string>
    <string name="title_activity_display_contest">Contest</string>
    <string name="title_activity_display_entry">Contest Entry</string>
    <string name="utube_error">Error loading YouTube video!</string>
    <string name="artist">Artist:</string>
    <string name="title">Title:</string>
    <string name="language">Language:</string>
    <string name="eng_title">English title:</string>
    <string name="my_rate">Rate:</string>
    <string name="my_comment">Comment:</string>
    <string name="first_semi">1st Semi</string>
    <string name="second_semi">2nd Semi</string>
    <string name="final_contest">Final</string>
    <string name="results">Results</string>
    <string name="contestants">Contestants</string>
    <string name="my_list">My list</string>
    <string name="points">Points</string>
    <string name="point">Point</string>
    <string name="share_action">Share ratings</string>
    <string name="share_intro_1st">Ratings for %s (1st semifinal)</string>
    <string name="share_intro_2nd">Ratings for %s (2nd semifinal)</string>
    <string name="share_intro_final">Ratings for %s (final)</string>
    <string name="share_intro_all">Ratings for %s</string>
    <string name="share_outro">via ESC App for Android</string>
    <string name="share_outro_short">ESC App for Android</string>
    <string name="rate_mode_traditional">Traditional</string>
    <string name="rate_mode_traditional_desc">Give rates from 1 to 10 to all songs.</string>
    <string name="rate_mode_eurovision">Eurovision</string>
    <string name="rate_mode_eurovision_desc">Use "the Eurovision way" of giving points only to your
        favourite songs (12, 10, 8, 7, 6, 5, 4, 3, 2 and 1 points).</string>
    <string name="share_mode_title">Set sharing mode</string>
    <string name="share_mode_include_comments">Include comments and rates</string>
    <string name="share_mode_include_only_rates">Include only rates</string>
    <string name="do_not_ask_again">Do not ask again</string>
    <string name="no_points">No points</string>
    <string name="updated_data_found">Updated contest data found. Update now?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="reset_ratings_title">Reset rates</string>
    <string name="reset_ratings_message">Are you sure you want to reset given rates for the current rate mode?</string>
    <string name="delete_comments_title">Delete comments</string>
    <string name="delete_comments_message">Are you sure that you want to remove all comments given to the entries of this contest?</string>
    <string name="about_title">ESC Application</string>
    <string name="about_version">Version:</string>
    <string name="about_date">Date:</string>
    <string name="about_email">For feedback and bug reports: esc.application@gmail.com</string>
    <string name="about_ok">OK</string>
    <string name="long_app_name">Eurovision Song Contest App</string>
    <string name="country_armenia">Armenia</string>
    <string name="country_montenegro">Montenegro</string>
    <string name="country_iceland">Iceland</string>
    <string name="country_greece">Greece</string>
    <string name="country_latvia">Latvia</string>
    <string name="country_albania">Albania</string>
    <string name="country_romania">Romania</string>
    <string name="country_switzerland">Switzerland</string>
    <string name="country_belgium">Belgium</string>
    <string name="country_finland">Finland</string>
    <string name="country_israel">Israel</string>
    <string name="country_san_marino">San Marino</string>
    <string name="country_cyprus">Cyprus</string>
    <string name="country_denmark">Denmark</string>
    <string name="country_russia">Russia</string>
    <string name="country_hungary">Hungary</string>
    <string name="country_austria">Austria</string>
    <string name="country_moldova">Moldova</string>
    <string name="country_ireland">Ireland</string>
    <string name="country_serbia">Serbia</string>
    <string name="country_macedonia">North Macedonia</string>
    <string name="country_netherlands">Netherlands</string>
    <string name="country_malta">Malta</string>
    <string name="country_belarus">Belarus</string>
    <string name="country_portugal">Portugal</string>
    <string name="country_poland">Poland</string>
    <string name="country_ukraine">Ukraine</string>
    <string name="country_bulgaria">Bulgaria</string>
    <string name="country_slovenia">Slovenia</string>
    <string name="country_croatia">Croatia</string>
    <string name="country_sweden">Sweden</string>
    <string name="country_georgia">Georgia</string>
    <string name="country_turkey">Turkey</string>
    <string name="country_estonia">Estonia</string>
    <string name="country_slovakia">Slovakia</string>
    <string name="country_norway">Norway</string>
    <string name="country_bosnia_and_herzegovina">Bosnia and Herzegovina</string>
    <string name="country_lithuania">Lithuania</string>
    <string name="country_united_kingdom">United Kingdom</string>
    <string name="country_france">France</string>
    <string name="country_italy">Italy</string>
    <string name="country_azerbaijan">Azerbaijan</string>
    <string name="country_spain">Spain</string>
    <string name="country_germany">Germany</string>
    <string name="country_czech_republic">Czech Republic</string>
    <string name="country_australia">Australia</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_macedonian">Macedonian</string>
    <string name="language_albanian">Albanian</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_italian">Italian</string>
    <string name="language_slovene">Slovene</string>
    <string name="language_polish">Polish</string>
    <string name="language_hebrew">Hebrew</string>
    <string name="language_montenegrin">Montenegrin</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_latvian">Latvian</string>
    <string name="language_hungarian">Hungarian</string>
    <string name="language_greek">Greek</string>
    <string name="language_icelandic">Icelandic</string>
    <string name="language_bulgarian">Bulgarian</string>
    <string name="language_serbian">Serbian</string>
    <string name="language_romani">Romani</string>
    <string name="language_croatian">Croatian</string>
    <string name="language_estonian">Estonian</string>
    <string name="language_bosnian">Bosnian</string>
    <string name="language_georgian">Georgian</string>
    <string name="language_german">German</string>
    <string name="language_udmurt">Udmurt</string>
    <string name="language_swedish">Swedish</string>
    <string name="language_romanian">Romanian</string>
    <string name="city_vienna">Vienna</string>
    <string name="city_copenhagen">Copenhagen</string>
    <string name="city_malmö">Malmö</string>
    <string name="city_baku">Baku</string>
    <string name="spotify_action">Spotify</string>
    <string name="unofficial_video_watch">Watch video on YouTube.</string>
    <string name="unofficial_video_desc">Video available later in ESC App.</string>
    <string name="comment_placeholder_tap">Tap to write down your comments.</string>
    <string name="comment_placeholder">Write down your comments here.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="countdown_days">It\'s %d days to Eurovision Grand Final!</string>
    <string name="countdown_hours">It\'s %d hours to Eurovision Grand Final!</string>
    <string name="countdown_minutes">It\'s %d minutes to Eurovision Grand Final!</string>
    <string name="rate_app_title">Rate ESC App</string>
    <string name="rate_app_description">If you like ESC App, please take a moment to rate it in Play Store. Thanks!</string>
    <string name="rate_app_follow">Follow us:</string>
    <string name="no_thanks">No thanks</string>
    <string name="rate_app_play_store">Rate in Play Store</string>
    <string name="error_something_wrong">Something went wrong. Please try again.</string>
    <string name="share_image_1st_sf">Top 10 for %s (1st semifinal)</string>
    <string name="share_image_2nd_sf">Top 10 for %s (2nd semifinal)</string>
    <string name="share_image_final">Top 10 for %s (final)</string>
    <string name="share_dialog_title">Share ratings</string>
    <string name="share_dialog_save_image">Share as image</string>
    <string name="share_dialog_share_text">Share as text</string>
    <string name="language_finnish">Finnish</string>
    <string name="share_image_all">Top 10 for %s</string>
    <string name="language_corsican">Corsican</string>
    <string name="language_slovak">Slovak</string>
    <string name="language_dutch">Dutch</string>
    <string name="language_norwegian">Norwegian</string>
    <string name="city_gothenburg">Gothenburg</string>
    <string name="city_stockholm">Stockholm</string>
    <string name="language_crimean_tatar">Crimean Tatar</string>
    <string name="city_moscow">Moscow</string>
    <string name="language_armenian">Armenian</string>
    <string name="language_catalan">Catalan</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_russian">Russian</string>
    <string name="language_ukrainian">Ukrainian</string>
    <string name="set_user_name_title">Username</string>
    <string name="set_user_name_placeholder">Your username is shown on your shared ratings.</string>
    <string name="language_belarusian">Belarusian</string>
    <string name="city_kiev">Kiev</string>
    <string name="city_lisbon">Lisbon</string>
    <string name="language_lithuanian">Lithuanian</string>
    <string name="language_amharic">Amharic</string>
</resources>
