<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.escapp.view.DisplayContestActivity" >
    <item
        android:id="@+id/menu_item_share"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_action" />
    <item
        android:id="@+id/menu_item_share_options"
        app:showAsAction="never"
        android:title="@string/share_action" />
    <item android:id="@+id/action_set_rate_mode"
        android:title="@string/action_set_rate_mode"
        app:showAsAction="never" />
    <item android:id="@+id/action_reset_rates"
        android:title="@string/action_reset_rates"
        app:showAsAction="never" />
    <item android:id="@+id/action_delete_comments"
        android:title="@string/action_delete_comments"
        app:showAsAction="never" />
</menu>
