<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_traditional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRateClick"
            android:text="@string/rate_mode_traditional" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:textColor="?android:textColorSecondary"
            android:fontFamily="sans-serif-light"
            android:text="@string/rate_mode_traditional_desc"/>
        <RadioButton android:id="@+id/radio_eurovision"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_mode_eurovision" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            android:textColor="?android:textColorSecondary"
            android:fontFamily="sans-serif-light"
            android:text="@string/rate_mode_eurovision_desc"/>
    </RadioGroup>
</LinearLayout>