<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_include_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_mode_include_comments" />
        <RadioButton android:id="@+id/radio_include_only_rates"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_mode_include_only_rates" />
    </RadioGroup>
    <CheckBox
        android:id="@+id/remember_share_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/do_not_ask_again"/>
</LinearLayout>