<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.escapp.view.DisplayEntryActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/youtube_button"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/youtube_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_youtube"
                    android:onClick="onYouTubeButtonClicked" />
                <TextView
                    android:id="@+id/youtube_text_row_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textColor="@color/youtube_text"
                    android:text="@string/unofficial_video_watch" />
                <TextView
                    android:id="@+id/youtube_text_row_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textColor="@color/youtube_text"
                    android:text="@string/unofficial_video_desc" />
            </LinearLayout>
            <fragment
                android:name="com.google.android.youtube.player.YouTubePlayerFragment"
                android:id="@+id/youtube_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#66808080" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:gravity="center_vertical|right">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:id="@+id/countryFlag"
                    android:src="@drawable/flag_finland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_gravity="top"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|left"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.75">
                <TextView
                    android:id="@+id/artist"
                    android:layout_alignRight="@+id/language"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:textAlignment="viewEnd"
                    android:gravity="end"
                    android:minWidth="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/artist"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/entryArtist"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/artist"
                    android:text="Conchita Wurst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/title"
                    android:layout_below="@+id/entryArtist"
                    android:layout_alignRight="@+id/language"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:minWidth="60dp"
                    android:textAlignment="viewEnd"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/entryTitle"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@+id/entryArtist"
                    android:layout_toRightOf="@+id/title"
                    android:text="Rise like a phoenix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/language"
                    android:layout_below="@+id/entryTitle"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="60dp"
                    android:textAlignment="viewEnd"
                    android:gravity="end"
                    android:text="@string/language"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/entryLanguage"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@+id/entryTitle"
                    android:layout_toRightOf="@+id/language"
                    android:layout_alignTop="@+id/language"
                    android:text="English"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/engTitle"
                    android:layout_below="@+id/entryLanguage"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:minWidth="60dp"
                    android:textAlignment="viewEnd"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_title"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/entryEngTitle"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@+id/entryLanguage"
                    android:layout_toRightOf="@+id/engTitle"
                    android:layout_alignTop="@+id/engTitle"
                    android:text="Eng title if found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:textSize="14sp"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#66808080" />
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <RelativeLayout
                android:background="@drawable/vertical_right_border"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <ImageButton
                    android:id="@+id/spotifyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toolbar_button_spotify"
                    android:onClick="onSpotifyButtonClicked" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <ImageButton
                    android:id="@+id/lyricsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toolbar_button_lyrics"
                    android:onClick="onLyricsButtonClicked" />
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#66808080" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <TextView
                android:id="@+id/myRate"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/my_rate"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/rate_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:text="10"
                android:textColor="@color/text_color"
                android:textSize="36sp" />
            <SeekBar
                android:id="@+id/rate_bar"
                android:max="10"
                android:layout_below="@+id/rate_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/rate_spinner"
                android:layout_below="@+id/myRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#66808080" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:id="@+id/myComment"
                android:fontFamily="sans-serif-light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/my_comment"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/commentValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/comment_placeholder_tap"
                android:clickable="true"
                android:onClick="onEditCommentClicked"
                android:textSize="14sp"
                android:textColor="@color/text_color"
                android:ellipsize="end"
                android:layout_below="@+id/myComment"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>